--- a/Rocky/Views/ApplicationType/Edit.cshtml
+++ b/Rocky/Views/ApplicationType/Edit.cshtml
@@ -1,11 +1,12 @@
-﻿@model Rocky.Models.Category
+﻿@model Rocky.Models.ApplicationType
 
-<form asp-action="Create" method="post">
+<form method="post">
+    <input asp-for="Id" hidden />
   <div class="border p-3">
-      <div asp-validation-summary="ModelOnly"></div>
+      
       <div class="form-group row">
           <h2 class="text-ingo pl-3">
-              Add Category
+              Edit ApplicationType
           </h2>
       </div>
       <div class="row">
@@ -19,21 +20,13 @@
                       <span asp-validation-for="Name" class="text-danger"></span>
                   </div>
               </div>
-              <div class="form-group row">
-                  <div class="col-4">
-                     <label asp-for="DisplayOrder"></label>
-                  </div>
-                  <div class="col-8">
-                      <input asp-for="DisplayOrder" class="form-control" />
-                      <span asp-validation-for="DisplayOrder" class="text-danger"></span>
-                  </div>
-              </div>
+             
               <div class="form-group row">
                   <div class="col-8 offset-4 row">
                       
                   </div>
                   <div class="col">
-                     <input type="submit" class="btn btn-info w-100" value="Create" />
+                     <input type="submit" class="btn btn-info w-100" value="Update" />
                   </div>
                   <div class="col">
                      <a asp-action="Index" class="btn btn-success w-100">Back</a>
