--- a/Rocky/Views/ApplicationType/Index.cshtml
+++ b/Rocky/Views/ApplicationType/Index.cshtml
@@ -1,12 +1,12 @@
-﻿@model IEnumerable<Rocky.Models.Category>
+﻿@model IEnumerable<Rocky.Models.ApplicationType>
 <div class="container p-3">
     <div class="row pt-4">
         <div class="col-6">
-            <h2 class="text-primary"> Category List</h2>
+            <h2 class="text-primary"> Application Type List</h2>
         </div>
         <div class="col-6 text-right" >
-            <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
-                Create New Category
+            <a asp-controller="ApplicationType" asp-action="Create" class="btn btn-primary">
+                Create New Application Type
             </a>
         </div>
     </div>
@@ -18,14 +18,10 @@
             <thead>
                 <tr>
                     <th>
-                        Catefory Name
+                        Name
                     </th>
-                    <th>
-                       Display Order
-                    </th>
-                    
-                    <th>
-                        
+                                       
+                    <th>  
                     </th>
                 </tr>
             </thead>
@@ -36,15 +32,12 @@
                     <td width="50%">
                         @obj.Name
                     </td>
-                    <td width="30%">
-                        @obj.DisplayOrder
-                    </td>
                     <td class="text-center">
                         <div class="w-57 btn-group" role="group">
-                            <a asp-controller="Category" asp-route-Id="@obj.Id" asp-action="Edit" class="btn btn-primary mx-2">
+                            <a asp-controller="ApplicationType" asp-route-Id="@obj.Id" asp-action="Edit" class="btn btn-primary mx-2">
                                 Edit
                             </a>
-                            <a asp-controller="Category" asp-route-Id="@obj.Id" asp-action="Delete" class="btn btn-danger mx-2">
+                            <a asp-controller="ApplicationType" asp-route-Id="@obj.Id" asp-action="Delete" class="btn btn-danger mx-2">
                                 Delete
                             </a>
 
@@ -58,7 +51,7 @@
     }
     else
     {
-        <p>No category exists yet!</p>
+        <p>No Application exists yet!</p>
     }
 </div>
 
