--- a/Rocky/Views/Category/Delete.cshtml
+++ b/Rocky/Views/Category/Delete.cshtml
@@ -1,11 +1,12 @@
 ﻿@model Rocky.Models.Category
 
-<form asp-action="Create" method="post">
+<form method="post" asp-action="DeletePost">
+    <input asp-for="Id" hidden />
   <div class="border p-3">
-      <div asp-validation-summary="ModelOnly"></div>
+      
       <div class="form-group row">
           <h2 class="text-ingo pl-3">
-              Add Category
+              Delete Category
           </h2>
       </div>
       <div class="row">
@@ -16,7 +17,7 @@
                   </div>
                   <div class="col-8">
                       <input asp-for="Name" class="form-control" />
-                      <span asp-validation-for="Name" class="text-danger"></span>
+                     
                   </div>
               </div>
               <div class="form-group row">
@@ -25,7 +26,6 @@
                   </div>
                   <div class="col-8">
                       <input asp-for="DisplayOrder" class="form-control" />
-                      <span asp-validation-for="DisplayOrder" class="text-danger"></span>
                   </div>
               </div>
               <div class="form-group row">
@@ -33,7 +33,7 @@
                       
                   </div>
                   <div class="col">
-                     <input type="submit" class="btn btn-info w-100" value="Create" />
+                     <input type="submit" class="btn btn-info w-100" value="Delete" />
                   </div>
                   <div class="col">
                      <a asp-action="Index" class="btn btn-success w-100">Back</a>
@@ -44,6 +44,8 @@
       </div>
   </div>
 </form>
+
+
 @section Scripts{ 
 @{ <partial name="_ValidationScriptsPartial" />}
 }
