--- a/Rocky/Views/Category/Edit.cshtml
+++ b/Rocky/Views/Category/Edit.cshtml
@@ -1,11 +1,12 @@
 ﻿@model Rocky.Models.Category
 
-<form asp-action="Create" method="post">
+<form method="post">
+    <input asp-for="Id" hidden />
   <div class="border p-3">
-      <div asp-validation-summary="ModelOnly"></div>
+      
       <div class="form-group row">
           <h2 class="text-ingo pl-3">
-              Add Category
+              Edit Category
           </h2>
       </div>
       <div class="row">
@@ -33,7 +34,7 @@
                       
                   </div>
                   <div class="col">
-                     <input type="submit" class="btn btn-info w-100" value="Create" />
+                     <input type="submit" class="btn btn-info w-100" value="Update" />
                   </div>
                   <div class="col">
                      <a asp-action="Index" class="btn btn-success w-100">Back</a>
